--- a/basic_1/index.html
+++ b/basic_1/index.html
@@ -13,7 +13,8 @@
 <body>
 <!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
--->
 <script src="main.js"></script>
+-->
+<canvas class="glslCanvas" data-fragment-url="shader.frag" width="500" height="500"></canvas>
 </body>
 </html>
