--- a/basic_1/index.html
+++ b/basic_1/index.html
@@ -8,13 +8,16 @@
     <meta name="description" content="basic example">
     <link rel="stylesheet" href="style.css">
     
-    <script type="text/javascript" src="https://rawgit.com/patriciogonzalezvivo/glslCanvas/master/dist/GlslCanvas.js"></script>
+   <!-- <script type="text/javascript" src="https://rawgit.com/patriciogonzalezvivo/glslCanvas/master/dist/GlslCanvas.js"></script>
+   -->
 </head>
 <body>
 <!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
-<script src="main.js"></script>
 -->
+
+<script src="main.js"></script>
+
 <canvas class="glslCanvas" data-fragment-url="shader.frag" width="500" height="500"></canvas>
 </body>
 </html>
