--- a/basic_1/index.html
+++ b/basic_1/index.html
@@ -16,7 +16,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
 
 
-<script src="main.js"></script>
+<script src="artwork.js"></script>
 <!--
 <canvas class="glslCanvas" data-fragment-url="shader.frag" width="500" height="500"></canvas>
 -->
