--- a/basic_1/index.html
+++ b/basic_1/index.html
@@ -12,11 +12,15 @@
    -->
 </head>
 <body>
-
+<div>
+<a href="http://www.abcgallery.com/S/seurat/seurat37.JPG">Orginal Seurat (detail)</a>
+</div>
+<div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
 
 
 <script src="artwork.js"></script>
+</div>
 <!--
 <canvas class="glslCanvas" data-fragment-url="shader.frag" width="500" height="500"></canvas>
 -->
