--- a/beaver_bridge_business/redirect.html
+++ b/beaver_bridge_business/redirect.html
@@ -18,6 +18,7 @@ position:absolute;
 z-index:0;
   width:100vw;
   height:100vh;
+ -webkit-filter: blur(16px);
   background:url(http://nedeisenberg.com/assets/beaver_bridge.jpg);
   background-size:100% auto;
   background-position:center;
