--- a/beaver_bridge_business/redirect.html
+++ b/beaver_bridge_business/redirect.html
@@ -23,7 +23,7 @@ height:100vh;
 -webkit-transition:font-size .48s ease-in;
  -o-transition:font-size .48s ease-in;
 }
- a:hover{
+ .link:hover a{
   font-size:4.5em;
  }
  a:visited{
