--- a/beaver_bridge_business/redirect.html
+++ b/beaver_bridge_business/redirect.html
@@ -18,6 +18,7 @@ height:100vh;
   color:#08001d;
  text-decoration:none;
  font-family:Arial;
+  font-weight:bold;
  font-size:4em;
  -moz-transition:font-size .48s ease-in;
 -webkit-transition:font-size .48s ease-in;
